📝 (README.md): update project description and features for clarity and conciseness ✨ (README.md): add quick start section and usage examples for better onboarding 📝 (README.md): restructure documentation for improved navigation and readability ✨ (build-integration.md): add comprehensive CI/CD integration examples for various platforms 📝 (cli.md): introduce detailed command options and focused analysis commands 📝 (mcp.md): document MCP server capabilities and client integration examples 📝 (overview.md): provide a concise overview of VibeAlive's features and usage ✨ (webpack-plugin.md): detail Webpack plugin integration and configuration options 📝 (examples/README.md): organize examples directory with clear descriptions and usage patterns ✨ (examples/ci-cd/*): add CI/CD configuration examples for GitHub Actions, GitLab CI, Jenkins, CircleCI, and Azure DevOps ✨ (examples/next.config.with-vibealive.js): demonstrate Next.js integration with VibeAlive ✨ (examples/package-scripts.json): provide ready-to-use npm scripts for analysis scenarios ✨ (examples/vibealive.config.js): create a comprehensive configuration file for build-time analysis settings 🐛 (analyzer.ts): fix issues in Next.js pattern detection and improve analysis logic ✨ (nextjs-patterns-analyzer.ts): introduce advanced pattern detection for Next.js routing features 🐛 (dependency-analyzer.ts): enhance import resolution logic for service workers and web workers ✨ (package.json): update version and description to reflect new features and improvements 🔧 (scripts): remove obsolete MCP validation script to streamline the codebase
✨ feat(cli): add new commands for focused analysis and improve CLI options

- Introduce commands for checking file usage, scanning directories,
 analyzing components, and auditing SEO and performance.
- Enhance existing commands with additional options for CI integration
 and improved output handling.
- Update output directory structure to better organize analysis results.
- Implement user 

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vibealive",
-  "version": "1.2.0",
-  "description": "Universal Next.js code analysis tool to identify unused files, dead code, and redundant API endpoints",
+  "version": "0.4.0",
+  "description": "Universal Next.js code analysis tool to identify unused files, dead code, and redundant API endpoints with advanced pattern detection and project health scoring",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
@@ -47,6 +47,7 @@
     "@modelcontextprotocol/sdk": "^1.18.1",
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "fast-glob": "^3.3.0",
     "fs-extra": "^11.1.0",
@@ -59,6 +60,7 @@
   },
   "devDependencies": {
     "@types/babel__traverse": "^7.20.1",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/fs-extra": "^11.0.1",
     "@types/jest": "^29.5.0",
