📝 Update author name in package.json to reflect the current maintainer

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "typescript",
     "react"
   ],
-  "author": "Next Analyzer Team",
+  "author": "Joe Peterson",
   "license": "MIT",
   "repository": {
     "type": "git",
